--- a/front/index.html
+++ b/front/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/public/undertale-red.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Лабораторные работы по веб-программированию" />
+  <script src="https://www.desmos.com/api/v1.7/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
   <title>CM-ITMO</title>
 </head>
 
